[package]
name = "merge-tree"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trees = "0.4.2"
log = {version = "0.4", default-features = false}
libc = "0.2"
nix = "0.22.1"
xattr = "0.2.2"
structopt = "0.3"